...
            "state": "translated",
            "value": "或"
          }
        }
      }
    },
    "Continue with Apple": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Continue with Apple"
          }
...
            "state": "translated",
            "value": "使用 Apple 继续"
          }
        }
      }
    },
    "Continue with Google": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Continue with Google"
          }
...
            "value": "密码已修改，请重新登录。"
          }
        }
      },
      "extractionState": "manual"
    },
    "Password changed.": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Password changed."
          }
...
